--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.14.2",
     "pdfkit": "^0.17.1",
     "puppeteer": "^24.12.1",
+    "sharp": "^0.34.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
